[gd_scene load_steps=6 format=3 uid="uid://8g4c38tka1yf"]

[ext_resource type="Script" uid="uid://bchl8r4rhawwu" path="res://scenes/assets/trees/tree_types.gd" id="1_6j25m"]
[ext_resource type="Texture2D" uid="uid://brfrjygal55eo" path="res://art/tree/stage-1-tree.png" id="2_6j25m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7coxb"]
radius = 15.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_17iq3"]
radius = 6.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j25m"]
size = Vector2(43, 51)

[node name="TreeTypes" type="StaticBody2D" groups=["Tree"]]
modulate = Color(0.0588235, 0.0588235, 0.0588235, 1)
script = ExtResource("1_6j25m")

[node name="TreeTexture" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, 14)
scale = Vector2(0.765, 0.765)
texture = ExtResource("2_6j25m")
region_enabled = true
region_rect = Rect2(192, 0, 64, 64)

[node name="TreeInteraction" type="Area2D" parent="."]

[node name="TreeCollision" type="CollisionShape2D" parent="TreeInteraction"]
position = Vector2(0, 33)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7coxb")

[node name="TreeCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 33)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_17iq3")

[node name="TreeSpacingArea" type="Area2D" parent="."]

[node name="TreeSpacingCollisionShape" type="CollisionShape2D" parent="TreeSpacingArea"]
position = Vector2(-0.5, 24.5)
shape = SubResource("RectangleShape2D_6j25m")

[node name="RegrowTime" type="Timer" parent="."]

[connection signal="body_entered" from="TreeInteraction" to="." method="on_tree_interaction_body_entered"]
[connection signal="body_exited" from="TreeInteraction" to="." method="_on_tree_interaction_body_exited"]
